tests/baselines/reference/parserClassDeclaration5.errors.txt
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration5.ts(1,17): error TS2304: Cannot find name 'A'.
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration5.ts(1,30): error TS2304: Cannot find name 'B'.
tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration5.ts(1,32): error TS1175: 'implements' clause already seen.


==== tests/cases/conformance/parser/ecmascript5/ClassDeclarations/parserClassDeclaration5.ts (3 errors) ====
    class C extends A implements B implements C {
                    ~
!!! error TS2304: Cannot find name 'A'.
                                 ~
!!! error TS2304: Cannot find name 'B'.
                                   ~~~~~~~~~~
!!! error TS1175: 'implements' clause already seen.
    }